[package]
name = "derive-deref-rs"
description = "derive-deref-rs is a derive macro library used to easily defined the Derive and DrerfMut trait of the core library."
categories = ["derive macros"]
repository = "https://github.com/MathieuGravel/derive-deref-rs"
license = "MIT"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"